After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 692586 - Gnome shell no longer recognize caps lock
Gnome shell no longer recognize caps lock
Status: RESOLVED FIXED
Product: gnome-shell
Classification: Core
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gnome-shell-maint
gnome-shell-maint
Depends on:
Blocks:
 
 
Reported: 2013-01-26 16:55 UTC by Giovanni Campagna
Modified: 2013-02-03 17:16 UTC
See Also:
GNOME target: 3.8
GNOME version: ---


Attachments
StImText: don't translate keyboard state again (1.23 KB, patch)
2013-02-03 15:45 UTC, Giovanni Campagna
committed Details | Review

Description Giovanni Campagna 2013-01-26 16:55:16 UTC
Caps lock has no effect in gnome-shell master, including in entries. Text is inputted as if caps lock was always off.

I suspect a Clutter regression from the changes related to num lock.
Comment 1 Giovanni Campagna 2013-02-03 15:45:33 UTC
Created attachment 235108 [details] [review]
StImText: don't translate keyboard state again

Clutter translates keyboard state internally, and clears the lock bits
from modifier state, so translating again results in the wrong keysym.
Given that Clutter already gives us a fine keysym, we don't need this.
Comment 2 Rui Matos 2013-02-03 17:10:47 UTC
Review of attachment 235108 [details] [review]:

Yup. Actually this was probably never needed or at least not since a long time.
Comment 3 Giovanni Campagna 2013-02-03 17:16:32 UTC
Attachment 235108 [details] pushed as a8c8df6 - StImText: don't translate keyboard state again